chnage nb names numbers

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 data
 results
 text_embeddings_src/knn_accuracy_lena.py
-scripts/updated_dataset/print-results.ipynb
-scripts/updated_dataset/extra_experiments
+scripts/print-results.ipynb
+scripts/extra_experiments
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
